--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@uiw/react-md-editor": "^4.0.8",
     "appwrite": "^18.2.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
-    "next": "15.5.0",
+    "next": "^15.5.0",
     "node-appwrite": "^17.2.0",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-dom": "19.1.0",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
